--- a/ba thesis/literaturliste.tex
+++ b/ba thesis/literaturliste.tex
@@ -1,6 +1,7 @@
 %!TEX encoding = UTF-8 Unicode
 \documentclass[fontsize=12pt,parskip=half]{scrartcl}
 \include{stylesvs}
+%\bibliography{literaturliste.bib}
 \pagestyle{empty}
 \sloppy
 \begin{document}
@@ -10,7 +11,6 @@
 \textbf{\textsf{Bearbeiter:}} Eva Musterfrau, Heinz Mustermann
 
 \textbf{\textsf{Datum:}} \today
-
 \nocite{*} % adds all entries in the bib file to the bibliography
 
 % raggedright schaltet den Blocksatz ab und erzeugt ein stimmigeres Schriftbild im Literaturverzeichnis.
